--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --primaryColor:#fafafa;
-    --secondarycolor: #3019bd;
+    --secondarycolor: #18283b;
     --primaryText: #3019bd;
     --background: #fafafa;
     --navbar-width: 256px;
