--- a/style.css
+++ b/style.css
@@ -30,11 +30,11 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow: hidden;
     user-select: none;
+
   }
   #nav-bar hr {
     margin: 0;
     position: relative;
-    left: 16px;
     width: calc(100% - 32px);
     border: none;
     border-top: solid 1px var(--navbar-dark-secondary);
@@ -49,7 +49,6 @@
   
   #nav-header {
     position: relative;
-    width: var(--navbar-width);
     left: 16px;
     min-height: 80px;
     background: var(--navbar-dark-primary);
@@ -65,7 +64,6 @@
   }
   
   #nav-title {
-    font-size: 1.5rem;
     transition: opacity 1s;
   }
   
@@ -85,24 +83,14 @@
     padding: 16px 0;
     position: relative;
     flex: 1;
-    background: var(--navbar-dark-primary);
-    box-shadow: 0 0 0 16px var(--navbar-dark-primary);
     direction: rtl;
     overflow-x: hidden;
     transition: width 0.2s;
-  }
-  #nav-content::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  #nav-content::-webkit-scrollbar-thumb {
-    border-radius: 99px;
-    background-color: #D62929;
+    text-align: left;
   }
   #nav-content::-webkit-scrollbar-button {
     height: 16px;
   }
-  
   #nav-content-highlight {
     position: absolute;
     left: 16px;
@@ -131,7 +119,6 @@
   
   .nav-button {
     position: relative;
-    margin-left: 16px;
     height: 54px;
     display: flex;
     align-items: center;
@@ -141,14 +128,24 @@
     z-index: 1;
     transition: color 0.2s;
   }
+
+  .nav-button-addNote {
+    position: relative;
+    height: 54px;
+    display: flex;
+    align-items: center;
+    color: var(--navbar-light-secondary);
+    direction: ltr;
+    cursor: pointer;
+    z-index: 1;
+    transition: color 0.2s;
+  }
+
   .nav-button span {
     transition: opacity 1s;
   }
   .nav-button .fas {
     transition: min-width 0.2s;
-  }
-  .nav-button:nth-of-type(1):hover {
-    color: var(--navbar-dark-primary);
   }
   .nav-button:nth-of-type(1):hover ~ #nav-content-highlight {
     top: 16px;
@@ -208,6 +205,10 @@
     font-family: 'Montserrat', Verdana, sans-serif;
 }
 
+.document{
+    width: 50%;
+}
+
 .wrapper{
     margin-top: 50px;
     margin-left: calc(15% + 50px);
@@ -222,6 +223,10 @@
     border-radius: 5px;
     padding: 15px 20px 20px;
 }
+
+.add-box{
+    color: var(--primaryColor)
+}
 .add-box, .icon, .bottom-content, .popup, header{
     display: flex;
     align-items: center;
@@ -231,18 +236,6 @@
     flex-direction: column;
     justify-content: center;
     cursor: pointer;
-}
-.add-box .icon{
-    height: 88px;
-    width: 88px;
-    font-size: 60px;
-    justify-content: center;
-    color: var(--secondarycolor);
-}
-.add-box p{
-    color: var(--primaryText);
-    font-weight: 500;
-    margin-top: 20px;
 }
 .wrapper .note{
     display: flex;
