Funktion weitergemacht, wenn man auf Notiz klickt, dass diese angezeigt wird und bearbeitbar ist.

--- a/style.css
+++ b/style.css
@@ -470,3 +470,11 @@ form .row label{
 #show-code[data-active="true"] {
 	background: #eee;
 }
+
+.title {
+    padding-top: 16px;
+    text-align: center;
+    color: var(--primaryColor);
+    font-weight: 600;
+    font-size: xx-large;
+}
