--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-:root{
-    --primaryColor:#000;
+:root {
+    --primaryColor: #000;
     --secondarycolor: #202020;
     --primaryText: #3019bd;
     --background: #202020;
@@ -12,36 +12,32 @@
     --navbar-light-primary: #000;
     --navbar-light-secondary: #606060;
     --navbar-border-color: #303030;
-}  
-  html, body {
+}
+
+html, body {
     margin: 0;
     background: #fff;
     display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     width: 100%;
-  }
+}
 
 
 li {
-	margin-left: 16px;
+    margin-left: 16px;
 }
 
 a {
-	cursor: pointer;
+    cursor: pointer;
 }
-  
-  #nav-bar {
+
+#nav-bar {
     position: absolute;
-      left: 0px;
-      top: 0px;
-    /*left: 16px;
-    top: 16px;
-    bottom: 16px;
-    border-radius: 16px;
-    height: calc(100% - 32px);*/
-      height: 100%;
+    left: 0;
+    top: 0;
+    height: 100%;
     width: 15%;
     background: #ffffff;
 
@@ -53,206 +49,184 @@ a {
     overflow: hidden;
     user-select: none;
 
-  }
-  #nav-bar hr {
+}
+
+#nav-bar hr {
     margin: 0;
     position: relative;
     width: calc(100% - 32px);
     border: none;
     border-top: solid 1px var(--navbar-border-color);
     content: attr(data-content);
-    position: relative;
     display: inline-block;
-    
-  }
-  #nav-bar a {
+}
+
+#nav-bar a {
     color: inherit;
     text-decoration: inherit;
-  }
-  #nav-bar input[type=checkbox] {
-    display: none;
-  }
-  
-  #nav-header {
-      width: calc(100% - 16px);
-      border-radius: 8px;
+}
+
+#nav-header {
+    width: calc(100% - 16px);
+    border-radius: 8px;
     position: relative;
-    min-height: 54px;
+    min-height: 45px;
     background: var(--primaryText);
     z-index: 2;
     display: flex;
     align-items: center;
     transition: width 0.2s;
-      left: 8px;
-      top: 8px;
-      right: 8px;
-  }
-  #nav-header hr {
+    left: 8px;
+    top: 8px;
+    right: 8px;
+}
+
+#nav-header hr {
     position: absolute;
     bottom: 0;
-  }
-  
-  #nav-title {
+}
+
+#nav-title {
     transition: opacity 1s;
-  }
-  
-  label[for=nav-toggle] {
-    position: absolute;
-    right: 0;
-    width: 3rem;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-  }
-  
-  #nav-content {
-    margin: -16px 0;
-    padding: 16px 0;
-    position: relative;
-    flex: 1;
-    direction: rtl;
+}
+#nav-content {
     overflow-x: hidden;
-    transition: width 0.2s;
-    text-align: left;
-  }
-  #nav-content::-webkit-scrollbar-button {
+}
+
+#nav-content::-webkit-scrollbar-button {
     height: 16px;
-  }
-  #nav-content-highlight {
-    position: absolute;
-    left: 16px;
-    top: -70px;
-    width: calc(100% - 16px);
-    height: 54px;
-    background: var(--background);
-    background-attachment: fixed;
-    border-radius: 16px 0 0 16px;
-    transition: top 0.2s;
-  }
-  #nav-content-highlight:before, #nav-content-highlight:after {
-    content: "";
-    position: absolute;
-    right: 0;
-    bottom: 100%;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    box-shadow: 16px 16px var(--background);
-  }
-  #nav-content-highlight:after {
-    top: 100%;
-    box-shadow: 16px -16px var(--background);
-  }
-  
-  .nav-button {
-    position: relative;
-    height: 54px;
+}
+
+.nav-button {
+    width: 100%;
+    height: 35px;
     display: flex;
-    align-items: center;
+    justify-content: flex-start;
     color: var(--navbar-light-secondary);
     direction: ltr;
+    align-items: center;
     cursor: pointer;
     z-index: 1;
-    transition: color 0.2s;
-  }
+    transition: background-color 0.2s;
+    border-radius: 8px;
+}
+.nav-button:hover {
+    background-color: #f5f5f5;
 
-  .nav-button-addNote {
+}
+
+.nav-button-addNote {
     position: relative;
-    height: 54px;
+    height: 45px;
     color: #fff;
     cursor: pointer;
     z-index: 1;
     transition: color 0.2s;
-      background-color: #3019bd;
-      margin: 8px;
-      border-radius: 5px;
-      Display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 1px 1px 5px 1px lightgrey;
+    background-color: #3019bd;
+    margin: 8px;
+    border-radius: 5px;
+    Display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 1px 1px 5px 1px lightgrey;
+}
 
-  }
 .nav-button-addNote:hover {
     background-color: #2d17a9;
 }
 
-  .nav-button span {
+.nav-button span {
     transition: opacity 1s;
-  }
-  .nav-button .fas {
+}
+
+.nav-button .fas {
     transition: min-width 0.2s;
-  }
-  .nav-button:nth-of-type(1):hover ~ #nav-content-highlight {
+}
+
+.nav-button:nth-of-type(1):hover ~ #nav-content-highlight {
     top: 16px;
-  }
-  .nav-button:nth-of-type(2):hover {
+}
+
+.nav-button:nth-of-type(2):hover {
     color: var(--navbar-dark-primary);
-  }
-  .nav-button:nth-of-type(2):hover ~ #nav-content-highlight {
+}
+
+.nav-button:nth-of-type(2):hover ~ #nav-content-highlight {
     top: 70px;
-  }
-  .nav-button:nth-of-type(3):hover {
+}
+
+.nav-button:nth-of-type(3):hover {
     color: var(--navbar-dark-primary);
-  }
-  .nav-button:nth-of-type(3):hover ~ #nav-content-highlight {
+}
+
+.nav-button:nth-of-type(3):hover ~ #nav-content-highlight {
     top: 124px;
-  }
-  .nav-button:nth-of-type(4):hover {
+}
+
+.nav-button:nth-of-type(4):hover {
     color: var(--navbar-dark-primary);
-  }
-  .nav-button:nth-of-type(4):hover ~ #nav-content-highlight {
+}
+
+.nav-button:nth-of-type(4):hover ~ #nav-content-highlight {
     top: 178px;
-  }
-  .nav-button:nth-of-type(5):hover {
+}
+
+.nav-button:nth-of-type(5):hover {
     color: var(--navbar-dark-primary);
-  }
-  .nav-button:nth-of-type(5):hover ~ #nav-content-highlight {
+}
+
+.nav-button:nth-of-type(5):hover ~ #nav-content-highlight {
     top: 232px;
-  }
-  .nav-button:nth-of-type(6):hover {
+}
+
+.nav-button:nth-of-type(6):hover {
     color: var(--navbar-dark-primary);
-  }
-  .nav-button:nth-of-type(6):hover ~ #nav-content-highlight {
+}
+
+.nav-button:nth-of-type(6):hover ~ #nav-content-highlight {
     top: 286px;
-  }
-  .nav-button:nth-of-type(7):hover {
+}
+
+.nav-button:nth-of-type(7):hover {
     color: var(--navbar-dark-primary);
-  }
-  .nav-button:nth-of-type(7):hover ~ #nav-content-highlight {
+}
+
+.nav-button:nth-of-type(7):hover ~ #nav-content-highlight {
     top: 340px;
-  }
-  .nav-button:nth-of-type(8):hover {
+}
+
+.nav-button:nth-of-type(8):hover {
     color: var(--navbar-dark-primary);
-  }
-  .nav-button:nth-of-type(8):hover ~ #nav-content-highlight {
+}
+
+.nav-button:nth-of-type(8):hover ~ #nav-content-highlight {
     top: 394px;
-  }
-  
-  #nav-bar .fas {
+}
+
+#nav-bar .fas {
     min-width: 3rem;
     text-align: center;
-  }
-  
-*{
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', Verdana, sans-serif;
 }
 
-.document{
+.document {
     width: 50%;
 }
 
 .container {
     margin-left: 15%;
-	width: 100%;
+    width: 100%;
     height: 100vh;
-	background: #fff;
-	overflow: hidden;
+    background: #fff;
+    overflow: hidden;
 }
+
 .toolbar {
     padding: 16px 10%;
     background: #fff;
@@ -277,6 +251,7 @@ a {
     cursor: pointer;
     box-shadow: 1px 1px 5px 1px lightgrey;
 }
+
 .toolbar .head select:hover {
 
     background: var(--primaryText);
@@ -294,6 +269,7 @@ a {
     grid-gap: 6px;
     padding: 0 10px;
 }
+
 .toolbar .head .color:hover {
     background: var(--primaryText);
     color: #ffffff;
@@ -351,20 +327,22 @@ a {
 }
 
 #content {
-	padding-left: 10%;
+    padding-left: 10%;
     padding-right: 10%;
     height: 100%;
     padding-top: 16px;
-	outline: none;
-	max-height: 50vh;
-	overflow: auto;
+    outline: none;
+    max-height: 50vh;
+    overflow: auto;
     color: var(--navbar-light-primary);
     cursor: text;
 }
+
 #content:focus {
 }
+
 #show-code[data-active="true"] {
-	background: #eee;
+    background: #eee;
 }
 
 #title {
@@ -377,6 +355,7 @@ a {
     cursor: text;
     outline: none;
 }
-#title:focus{
+
+#title:focus {
 }
 
