--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ a {
 }
 
 .nav-button {
+    padding-left: 16px;
+    padding-right: 16px ;
     width: 100%;
     height: 35px;
     display: flex;
@@ -132,15 +134,6 @@ a {
 
 .nav-button-addNote:hover {
     background-color: #2d17a9;
-}
-
-.nav-button span {
-    transition: opacity 1s;
-}
-
-#nav-bar .fas {
-    min-width: 3rem;
-    text-align: center;
 }
 
 * {
