--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 :root {
     --primaryColor: #000;
@@ -45,7 +45,7 @@ a {
     display: flex;
     flex-direction: column;
     color: var(--navbar-light-primary);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bolder;
     overflow: hidden;
     user-select: none;
 }
@@ -140,7 +140,7 @@ a {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', Verdana, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .document {
