--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a {
     display: flex;
     flex-direction: column;
     color: var(--navbar-light-primary);
-    font-weight: bolder;
+    font-weight: normal;
     overflow: hidden;
     user-select: none;
 }
