--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ a {
 
 }
 
-#content {
+#text-content {
     padding-left: 10%;
     padding-right: 10%;
     height: 100%;
@@ -273,7 +273,7 @@ a {
 
 }
 
-#content:focus {
+#text-content:focus {
 }
 
 #show-code[data-active="true"] {
@@ -297,5 +297,38 @@ a {
 #last-updated {
     width: 100%;
     justify-content: center;
+}
+
+.wrapper {
+    visibility: hidden;
+    position: absolute;
+    width: 150px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 12px 35px rgba(0, 0, 0, 0.1);
+}
+
+.wrapper .menu {
+}
+
+.content .item {
+    list-style: none;
+    font-size: 16px;
+    height: 40px;
+    display: flex;
+    width: 80%;
+    cursor: pointer;
+    align-items: center;
+    border-radius: 5px;
+    margin-bottom: 2px;
+}
+
+.content .item:hover {
+    background: #f2f2f2;
+}
+
+.content .item span {
+    margin-left: 8px;
+    font-size: 16px;
 }
 
