--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ a {
 
 .nav-button {
     padding-left: 16px;
-    padding-right: 16px ;
+    padding-right: 16px;
     width: 100%;
     height: 35px;
     display: flex;
@@ -109,6 +109,8 @@ a {
     z-index: 1;
     transition: background-color 0.2s;
     border-radius: 8px;
+    white-space: nowrap;
+
 }
 .nav-button:hover {
     background-color: #f5f5f5;
@@ -285,37 +287,8 @@ a {
 }
 
 #last-updated {
-    width: 100%;
-}
-
-.wrapper {
-    visibility: hidden;
     position: absolute;
-    width: 150px;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 12px 35px rgba(0, 0, 0, 0.1);
+    right: 3px;
+    font-size: x-small;
+    color: #303030;
 }
-
-.content .item {
-    list-style: none;
-    margin: 2px;
-    padding: 0 10px;
-    font-size: 16px;
-    height: 40px;
-    display: flex;
-    cursor: pointer;
-    align-items: center;
-    border-radius: 10px;
-    position: relative;
-}
-
-.content .item:hover {
-    background: #3019bd;
-    color: #ffffff;
-}
-
-.content .item span {
-    margin-left: 8px;
-}
-
