--- a/style.css
+++ b/style.css
@@ -156,16 +156,19 @@ a {
 }
 
 .nav-project-addNote {
-    position: relative;
+    padding-left: 32px;
+    padding-right: 16px;
     height: 20px;
-    color: #606060;
+    display: flex;
+    justify-content: flex-start;
+    color: #707070;
+    direction: ltr;
+    align-items: center;
     cursor: pointer;
     z-index: 1;
-    transition: color 0.2s;
-    margin: 8px;
-    border-radius: 5px;
-    Display: flex;
-    align-items: center;
+    transition: background-color 0.2s;
+    border-radius: 8px;
+    white-space: nowrap;
 }
 
 .nav-project-addProject {
@@ -185,7 +188,7 @@ a {
 }
 
 .nav-project-addNote:hover {
-    background-color: #2d17a9;
+    background-color: #eaeaea;
 }
 
 .nav-bar-heading{
