--- a/style.css
+++ b/style.css
@@ -126,19 +126,7 @@ a {
 }
 
 .nav-sub-notes {
-    padding-left: 32px;
-    padding-right: 16px;
-    height: 20px;
-    display: none;
-    justify-content: flex-start;
-    color: var(--navbar-light-secondary);
-    direction: ltr;
-    align-items: center;
-    cursor: pointer;
-    z-index: 1;
-    transition: background-color 0.2s;
-    border-radius: 8px;
-    white-space: nowrap;
+    display: none; /* Verstecke die Unterelemente standardmäßig */
 }
 
 .sub-note {
@@ -148,7 +136,7 @@ a {
 }
 
 .nav-sub-notes.show {
-    display: flex; /* Zeige die Unterelemente, wenn die Klasse 'show' vorhanden ist */
+    display: block; /* Zeige die Unterelemente, wenn die Klasse 'show' vorhanden ist */
 }
 
 .nav-note {
