--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ a {
 }
 
 .nav-project:hover {
+    background-color: #606060;
 }
 
 .nav-project .dropdown {
@@ -120,23 +121,11 @@ a {
 }
 
 .nav-project[data-isDropdownOpen="true"] .dropdown {
-    -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
 }
 
 .nav-project[data-isDropdownOpen="false"] .dropdown {
-    -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
-}
-
-#projecttitle:hover {
-    background-color: #f5f5f5;
-    border-radius: 16px;
-
-}
-
-.bx bx-chevron-down {
-    background-color: #f5f5f5;
 }
 
 .nav-sub-notes {
