add project button, navbar entfernt

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     --navbar-light-primary: #000;
     --navbar-light-secondary: #606060;
     --navbar-border-color: #303030;
+    --navbar-bordder-color: #170e48;
+
 }
 
 html, body {
