hover für cards

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --navbar-light-primary: #000;
     --navbar-light-secondary: #606060;
     --navbar-border-color: #303030;
-    --navbar-bordder-color: #170e48;
+    --navbar-bordder-color: #27139d;
 
 }
 
