--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --navbar-light-primary: #000;
     --navbar-light-secondary: #606060;
     --navbar-border-color: #303030;
-    --navbar-bordder-color: #8e2cde;
+    --navbar-bordder-color: #ab7fff;
 
 }
 
