--- a/navbar-style.css
+++ b/navbar-style.css
@@ -102,7 +102,6 @@ body.dark {
 .sidebar.close .text {
     opacity: 0;
 }
-
 /* =========================== */
 
 .sidebar header {
@@ -118,7 +117,6 @@ body.dark {
     display: flex;
     flex-direction: column;
 }
-
 header .image-text .name {
     margin-top: 2px;
     font-size: 18px;
@@ -190,16 +188,17 @@ body.dark .sidebar header .toggle-sidebar {
     font-size: 17px;
     font-weight: 500;
     transition: var(--tran-05);
+    transition: var(--tran-05);
 }
 
 .sidebar li a {
+    padding: 0;
     list-style: none;
     height: 100%;
+    width: 100%;
     background-color: transparent;
     display: flex;
     align-items: center;
-    height: 100%;
-    width: 100%;
     border-radius: 6px;
     text-decoration: none;
     transition: var(--tran-03);
@@ -208,12 +207,10 @@ body.dark .sidebar header .toggle-sidebar {
 .sidebar li a:hover {
     background-color: var(--primary-color);
 }
-
 .sidebar li a:hover .icon,
 .sidebar li a:hover .text {
     color: var(--sidebar-color);
 }
-
 body.dark .sidebar li a:hover .icon,
 body.dark .sidebar li a:hover .text {
     color: var(--text-color);
@@ -299,7 +296,6 @@ body.dark .switch::before {
 
 .home {
     position: absolute;
-    top: 0;
     top: 0;
     left: 250px;
     height: 100vh;
