edit note und beginnen von review von note

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --navbar-light-primary: #000;
     --navbar-light-secondary: #606060;
     --navbar-border-color: #303030;
-    --navbar-bordder-color: #ab7fff;
+    --navbar-bordder-color: #19068d;
 
 }
 
