--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@ html, body {
     font-family: 'Poppins', sans-serif;
 }
 
+ul {
+    list-style-type: disc;
+}
+
+ol {
+    list-style-type: decimal;
+}
+
 .document {
     width: 50%;
 }
