OUTPUT.CSS geändert für editor

--- a/output.css
+++ b/output.css
@@ -696,7 +696,7 @@ video {
 
 .bg-\[\#3019bd\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(48 25 189 / var(--tw-bg-opacity));
+  background-color: rgb(48 25 189);
 }
 
 .bg-gray-50 {
