--- a/input.css
+++ b/input.css
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-ul {
-    list-style-type: disc;
+select {
+    color: black;
+    background-color: white;
 }
 
-ol {
-    list-style-type: decimal
+select:hover {
+    background-color: #3019bd;
 }
