--- a/input.css
+++ b/input.css
@@ -9,6 +9,12 @@ select {
 
 select:hover {
     background-color: #3019bd;
+    color: white;
+}
+
+input {
+    background-color: white;
+    color: black;
 }
 
 .color {
